--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <table cellspacing="10">
     <tr>
-        <td><img src="C:\Users\vijay\OneDrive\Desktop\Web development 2020\Personal site html\Images\IMG_20190222_154103_209.jpg" alt="Photo not available" height="250px" width="250px"></td>
+        <td><img src="https://scontent.fhyd15-1.fna.fbcdn.net/v/t1.0-9/53145789_1088560181329447_7644936199403995136_o.jpg?_nc_cat=100&_nc_sid=09cbfe&_nc_ohc=S63RXUTB7dwAX8NPzBz&_nc_ht=scontent.fhyd15-1.fna&oh=a3d8c1f2505f6fa350c70d280e992725&oe=5F18C4CF" alt="Photo not available" height="250px" width="250px"></td>
         <td><h2 >Vijay Kumar</h2>
             <p> <em>Student at <strong>Chandigarh University </strong></em> <br>
                 <em>Community Moderator of <strong>Paxful India 💜</strong></em></p>
